--- a/.babelrc
+++ b/.babelrc
@@ -28,5 +28,5 @@
 // }
 // //同时设置了presets和plugins，那么plugins的先运行；
 {
-  "presets": ["@babel/preset-env"]
+  "presets": ["@babel/preset-env", "@babel/typescript"]
 }
