--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,11 +27,9 @@ jobs:
       - checkout
       - attach_workspace:
           at: .
-      - run: yarn test
+      - run: yarn ci
       - store_test_results:
           path: test-results
-
-
 
 workflows:
   version: 2
